--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "backend/server.js",
+  "packageManager": "pnpm@10.17.1",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "kill-port 3001 && cross-env NODE_ENV=development nodemon backend/server.js ",
